--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,24 +1,3 @@
-.header {
-  background-color: #333;
-  color: #fff;
-  padding: 24px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-
-.header-link {
-  color: #fff;
-  text-decoration: none;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px 107px;
-  background-color: #ffffff;
-}
-
 .post {
   background-color: #ffffff;
   padding: 20px;
@@ -63,4 +42,18 @@ body {
 
 .post .content {
   line-height: 1.6;
+}
+
+/*ブラウザ標準のCSSが当たっているため、
+特に指定しない場合、ブラウザの使用で、aタグにはunderlineや青文字が適用されてしまう形だったため、以下を追記。*/
+.post .Link {
+  text-decoration: none;
+  color: #333;
+}
+
+.postLoading {
+  margin: 20px auto;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
 }
